# detector-network-processor

./: .gitignore  CMakeLists.txt  README.md
cmake/: files.cmake  packaging.cmake  version.cmake
config/: changelog  conffiles  config.h  configuration.example.cfg  copyright  credentials.example.cfg  detector-network-processor.1  detector-network-processor.cfg  detector-network-processor.service  license  muondetector-cluster-credentials  muondetector-cluster.1  muondetector-cluster.cfg  muondetector-cluster.service  postinst
include/: application.h  coincidencefilter.h  core.h  databasesink.h  detector.h  detectorinfo.h  detectortracker.h  mqttlink.h  pipeline.h  triggerhandler.h
include/analysis/: cachedvalue.h  coincidence.h  coincidencefilter.h  criterion.h  dataseries.h  detectorstation.h  eventconstructor.h  histogram.h  ratemeasurement.h  simplecoincidence.h  stationcoincidence.h  uppermatrix.h
include/link/: database.h  mqtt.h
include/messages/: clusterlog.h  detectorinfo.h  detectorlog.h  detectorstatus.h  detectorsummary.h  event.h  trigger.h  userinfo.h
include/pipeline/: base.h
include/sink/: ascii.h  base.h  database.h  mqtt.h
include/sinks/: ascii.h
include/source/: base.h  mqtt.h
include/supervision/: resource.h  state.h  station.h  station_coincidence.h  timebase.h
include/utility/: analysis.h  base64.h  coincidence.h  configuration.h  coordinatemodel.h  criterion.h  eventconstructor.h  exceptions.h  geohash.h  log.h  parameters.h  resourcetracker.h  rest_service.h  restservice.h  scopeguard.h  threadrunner.h  triggerhandler.h  units.h  uppermatrix.h  utility.h
source/cluster/: CMakeLists.txt
source/cluster/include/: coincidence.h  databaselogsink.h  detector.h  detectorinfo.h  event.h  mqttlogsource.h  mqttsink.h  mqttsource.h  utility.h
source/cluster/src/: core.cpp  databaseeventsink.cpp  detector.cpp  event.cpp  main.cpp  mqttlink.cpp  mqttlogsource.cpp  utility.cpp
src/: aggregation.cpp  application.cpp  coincidencefilter.cpp  configuration.cpp  core.cpp  detector.cpp  detectortracker.cpp  event.cpp  geohash.cpp  main.cpp  triggerhandler.cpp
src/analysis/: coincidence.cpp  coincidencefilter.cpp  criterion.cpp  detectorstation.cpp  eventconstructor.cpp  simplecoincidence.cpp  stationcoincidence.cpp  uppermatrix.cpp
src/link/: database.cpp  mqtt.cpp
src/messages/: clusterlog.cpp  detectorinfo.cpp  detectorlog.cpp  detectorsummary.cpp  event.cpp  trigger.cpp
src/supervision/: resource.cpp  state.cpp  station.cpp  station_coincidence.cpp  timebase.cpp
src/utility/: coincidence.cpp  configuration.cpp  eventconstructor.cpp  exceptions.cpp  geohash.cpp  log.cpp  parameters.cpp  resourcetracker.cpp  rest_service.cpp  restservice.cpp  scopeguard.cpp  threadrunner.cpp  triggerhandler.cpp  uppermatrix.cpp  utility.cpp
